# bookroom-audio

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.gpu  Makefile  README.md  docker-compose.yaml  pyproject.toml
bookroom_audio/: server.py
bookroom_audio/api/: __init__.py  app.py  utils.py
bookroom_audio/api/model/: whisper.py
bookroom_audio/api/routers/: __init__.py  server_routes.py  transcribe_routes.py
bookroom_audio/models/: whisper.py
bookroom_audio/utils/: utils_api.py
docker/: entrypoint.sh
