[project]
name = "bookroom-audio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "sndraw", email = "sndraw@github.com" },
]
dependencies = [
    "argparse>=1.4.0",
    "ascii-colors>=0.5.2",
    "dotenv>=0.9.9",
    "fastapi>=0.115.11",
    "faster-whisper>=1.1.1",
    "openai-whisper>=20240930",
    "python-multipart>=0.0.20",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "uvicorn>=0.34.0",
]
